@@ -1,3 +1,6 @@
+February 2021 - 1.5 Devel
+- New feature: Added "Adif file deletion" checkbox. User can choose to show or not the message boxes after uploading QSOs.
+
 TBD - 1.5-RC4
 TODO: Reviewing in the setup process.
 - New feature: LoTW confirmation is also counted for DXCC & WAZ.
